--- a/pages/timer/index.wxml
+++ b/pages/timer/index.wxml
@@ -1,13 +1,20 @@
-<view>
-  <view class="index-bd">
-    <view class="kind-list">
-      <block wx:for-items="{{list}}" wx:key="{{item.timerId}}">
-        <view class="kind-list-item">
-          <view id="{{item.timerId}}" class="kind-list-item-hd item.open" bindtap="kindToggle">
-            <view class="kind-list-text">{{item.timerId}}</view>
-          </view>
+<view class="list-bg">
+  <block wx:for-items="{{timerlist}}" wx:key="{{item.timerId}}">
+    <view class="kind-list-item">
+      <view id="{{item.timerId}}" class="kind-list-item-hd {{item.open ? 'kind-list-item-hd-show' : ''}}" bindtap="kindToggle">
+        <view class="kind-list-text">{{item.timerName}}</view>
+        <image class="kind-list-img" src="/images/media.png"></image>
+      </view>
+      <view class="kind-list-item-bd {{item.open ? 'kind-list-item-bd-show' : ''}}">
+          <view class="navigator-box {{item.open ? 'navigator-box-show' : ''}}">
+            <block wx:for-items="{{item.timerTask}}" wx:for-item="timerTask" wx:key="*item">
+              <navigator url="pages/{{page}}/{{page}}" class="navigator">
+                <view class="navigator-text">{{page}}</view>
+                <view class="navigator-arrow"></view>
+              </navigator>
+            </block>
         </view>
-      </block>
+      </view>
     </view>
-  </view>
+  </block>
 </view>
